# knowledge_transformer

./: .dockerignore  .env  .env.multimodal.example  .env.sample  .gitignore  =1.15.0  Dockerfile  Makefile  README.md  api_docs_server.py  check_asr_env.sh  docker-build.sh  docker-compose.yml  docker-start.sh  docker-status.sh  docker-stop.sh  knowledge_transformer详细设计文档.docx  knowledge_transformer详细设计文档.html  knowledge_transformer详细设计文档.md  make_key.sh  payload.json  pyproject.toml  show-all.sh  show_asr.sh  show_converter.sh  show_es_index_service.sh  show_es_search_service.sh  show_es_service.sh  show_llm.sh  show_mineru.sh  show_multimodal.sh  show_pipeline.sh  show_server.sh  show_slicer.sh  show_ui.sh  show_vector.sh  show_video.sh  start-all.sh  start_asr.sh  start_converter.sh  (+30 more)
config/: kb_chunks_v1_mapping.json  plugins-deps.yaml  plugins.yaml  settings.example.yaml
docker/: Dockerfile.app  Dockerfile.deps  docker-bake.hcl  entrypoint.sh
docs/: 20251217.md  api.md  celery_overview.md  configuration.md  docker.md  error_codes.md  es_index_service_design.md  es_rag_index_solution.md  es_search_service_design.md  es_service_design.md  indexing_design.md  indexing_structure.mmd  pipeline.md  probing_conversion_design.md  slicer_service_usage.md  video_parsing_design.md
project_docs/: docker_build_guide.md  generated_api_docs.md  rag_conversion_prompt.md
scripts/: build_images.sh  manage_appkey.py  manage_plugins.py  manage_plugins.sh  run_meta_from_minio.py  test_asr_service.py  test_concurrent_conversions.py  test_conversion_suite.py  test_doc_suite.py  (+2 more)
(+128 files in other folders)
